Fixed Sidebar on mobile Fixed login popup on mobile Fixed Tools page on mobile Fixed H3 title

--- a/themes/evolve/lessc/Andy.less
+++ b/themes/evolve/lessc/Andy.less
@@ -3867,6 +3867,9 @@ body .socialMediaIcon{
             color: #fff;
             padding: 5px;
             transition: all .5s linear;
+            &::first-letter{
+                text-transform: uppercase;
+            }
             &.off-right{
                 transform: rotate(-90deg) translate(0, 0px);
                 opacity: 1;
