--- a/themes/evolve/lessc/Drupal/Research.less
+++ b/themes/evolve/lessc/Drupal/Research.less
@@ -241,6 +241,11 @@
 					letter-spacing: 0;
 				}
 			}
+			h3{
+				color: #000;
+				font-size: 1.2em;
+				padding-top: 0;
+			}
 			.meta{
 				ul{
 					margin: 0;
