--- a/themes/evolve/lessc/popups.less
+++ b/themes/evolve/lessc/popups.less
@@ -1336,6 +1336,9 @@ div[aria-describedby="jobnoticement"].ui-dialog {
             width: 100%;
             font-size: 2.4em;
             margin: 18px 0px;
+            @media @larger-phone-width-down{
+                margin-top: 0;
+            }
         }
         .email-field{
             width: 100%;
